# agent-lens

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SEGMENTATION_BACKEND_PROCESSING.md  index.html  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt
.github/workflows/: docker-publish.yml  test.yml
agent_lens/: __init__.py  __main__.py  artifact_manager.py  log.py  register_frontend_service.py  register_sam_service.py  register_similarity_search_service.py  register_tools_service.py  service_utils.py  start_services.py  test_similarity_service.py
agent_lens/test/: test_similarity_service.py
agent_lens/tests/: conftest.py  test_basic.py  test_frontend_service.py  test_similarity_service.py
agent_lens/utils/: artifact_manager.py  chroma_storage.py  embedding_generator.py  recreate_weaviate_collection.py  register_sam_service.py  service_codecs.py  umap_analysis_utils.py  weaviate_search.py
bioengine-app/: cell-segmenter.py
docker/: docker-compose-agent-lens-app.yml  docker-compose.yml  dockerfile  healthcheck.sh
docs/: CHROMADB_MIGRATION_COMPLETE.md  CHROMADB_NOTEBOOK_MIGRATION.md  NOTEBOOK_UPDATES_WEAVIATE.md  TESTING.md  TESTING_SETUP_SUMMARY.md  WEAVIATE_IMPLEMENTATION_SUMMARY.md  WEAVIATE_INTEGRATION_GUIDE.md  hypha-agents-notebook.ipynb  zarr_tile_workflow.dot
frontend/: babel.config.js  index.html  jest.config.js  main.css  main.jsx  package.json  utils.jsx  vite.config.mjs
frontend/components/: ChannelSettings.jsx  ChatbotButton.jsx  DataManagement.jsx  DualRangeSlider.jsx  ImageJPanel.jsx  ImageSearchPanel.css  ImageSearchPanel.jsx  ImageViewBrowser.jsx  ImagingTasksControl.jsx  ImagingTasksModal.css  ImagingTasksModal.jsx  IncubatorControl.jsx  LogSection.jsx  MapButton.jsx  MapDisplay.jsx  MapInteractions.jsx  MapSetup.jsx  MicroscopeControlPanel.jsx  MicroscopeMapDisplay.css  MicroscopeMapDisplay.jsx  Notification.jsx  PenButton.jsx  SampleSelector.jsx  SegmentControls.jsx  Sidebar.css  Sidebar.jsx
frontend/components/agent/: AgentPanel.css  AgentPanel.jsx  AgentSettings.jsx  CanvasPanel.css  CanvasPanel.jsx  ChatInput.jsx  CodeCell.jsx  JupyterOutput.jsx  MarkdownCell.jsx  NotebookContent.jsx  SystemPromptViewer.jsx  ThinkingCell.jsx
frontend/components/annotation/: AnnotationCanvas.jsx  AnnotationDetailsWindow.jsx  AnnotationPanel.css  AnnotationPanel.jsx  SimilarAnnotationRenderer.jsx
frontend/components/map_visualization/: ExperimentZarrManager.jsx  LayerPanel.css  LayerPanel.jsx  MicroscopeMapDisplay.css  MicroscopeMapDisplay.jsx  README_TileProcessingManager.md  TileProcessingManager.jsx  WellPlateOffsetPanel.css  WellPlateOffsetPanel.jsx
frontend/components/microscope/controls/: NormalScanConfig.jsx  QuickScanConfig.css  QuickScanConfig.jsx
frontend/components/microscope/hooks/: useScanConfiguration.js
frontend/components/microscope/map/: ExperimentZarrManager.jsx  LayerPanel.css  LayerPanel.jsx  README_TileProcessingManager.md  TileProcessingManager.jsx
frontend/components/microscope/scan/: QuickScanConfiguration.jsx  ScanConfiguration.jsx  WellPlateGrid.jsx  index.js  scan.css
frontend/components/microscope_acquisition/: ImagingTasksModal.css  ImagingTasksModal.jsx  NormalScanConfig.css  NormalScanConfig.jsx  QuickScanConfig.jsx
frontend/components/similarity_search/: AnnotationDetailsWindow.jsx  AnnotationPanel.css  AnnotationPanel.jsx  SimilarityResultInfoWindow.jsx  SimilarityResultsRenderer.jsx  SimilaritySearchPanel.css  SimilaritySearchPanel.jsx
frontend/public/agent-configs/: microscope-assistant.js  microscope-control.js  microscope-squid-1.js  microscope-squid-2.js  microscope-squid-plus-3.js  squid-control-simulation.js
frontend/services/: artifactZarrLoader.js
frontend/src/: setupTests.js
frontend/src/__tests__/: LoginPrompt.test.jsx  utils.test.jsx
frontend/utils/: agentConfigLoader.js  agentKernelManager.js  annotationEmbeddingService.js  annotationUtils.js  ansi-utils.js  artifactZarrLoader.js  cellManager.js  chatCompletion.js  hyphaCoreServices.js  loadWebPythonKernel.js  openaiConfig.js  previewImageUtils.js  segmentationService.js  segmentationUtils.js  visionInspection.js
hypha-agents-notebooks/: README.md  agent-lens-U2OS-similar-cell-retrival.ipynb  agent-lens-hpa-analysis.ipynb  agent-lens-hpa-demo-20260301.ipynb  agent-lens-hpa-demo.ipynb  agent-lens-umap-cell-discovery.ipynb
performance-analysis/: ISSUE.md  README.md  bulk_fetch_test.js  chunk_performance_analysis.js  enhanced_bulk_fetch_test.js  http3_chunk_performance_analysis.js  multi_path_test.js  parallel_curl_test.sh  server_processing_bottleneck_analysis.js  simple_http2_push_example.js  true_batch_test.js  zip_creation_test.js
scripts/: deploy_cellsegmenter.py  docker_start.sh  package.json  run_dev.sh  run_frontend_tests.py  run_tests.py  setup_dev.sh  test_zarr_loading.js
src/: main.jsx  style.css
src/backend/: register_frontend_service.py
src/frontend/: index.html
src/frontend/components/: ChatbotButton.jsx  ImageDisplay.jsx
tests/: README.md  conftest.py  package.json  run_all_artifact_tests.sh  run_js_tests.sh  test_artifact_manager.py  test_artifact_manager_basic.py  test_artifact_zarr_loader.js  test_basic.py  test_chroma_integration.py  test_frontend_integration.js  test_frontend_service.py  test_health_check.py  test_similarity_service.py  test_simulated_zarr_frontend_routes.py  test_tools_service_weaviate.py  test_weaviate_filtering.py  test_weaviate_integration.py  test_zarr_streaming.js
tests/hypha-agents-integration/: README.md  kernel-manager.js  run-all-tests.sh  test-hypha-connection.js  test-integration.js  test-kernel-service.js
tests/test-frontend-components/: README.md  run_tests.js  test_layer_panel.js  test_tile_processing_manager.js
tiles_output/: vips-properties.xml
